[package]
name = "policy-server"
version = "0.1.0"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
wasmtime-provider = "0.0.2"
wapc = "0.10.1"
deadpool = "0.6.0"
async-trait = "0.1.42"